--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,54 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #F55A5A;
+  height:65px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-content:center;
+  align-items:center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+.App-header--title {
+  margin:0 10px;
+  padding:0 0;
+  line-height:100%;
+  font-size:20px;
+}
+
+.DestinationBlock {
+  display:flex;
+  flex-direction:column;
+  justify-content: center;
+  padding:80px 0;
+  margin:0 auto;
+}
+
+.Destination {
+  margin:auto;
+  display:flex;
+  width:600px;
+  border-bottom: 1px solid grey;
+  padding:50px 0;
+}
+
+.Destination:last-child{
+  border-bottom:none;
+}
+
+
+.Destination--Img {
+  width:200px;
+  height:300px;
+  border-radius:5px;
+}
+.Destination--TextSection {
+  padding:0 40px;
+}
+.text-left {
+  text-align:left;
 }
 
 .App-link {
